[project]
name = "kosha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shaman SR", email = "shamansr21@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
]

[project.scripts]
kosha = "kosha:main"

[build-system]
requires = ["uv_build>=0.11.11,<0.12.0"]
build-backend = "uv_build"
